--- a/site/HP/css/style.css
+++ b/site/HP/css/style.css
@@ -1,5 +1,5 @@
-
 /*pc用*/
+@media screen and (min-width:751px){
 html{
     font-size:100%;
 }
@@ -8,17 +8,32 @@ body{
     background-color: aliceblue;
     color: black;
 }
+.wrapper{
+    margin: 0 auto 0 auto;
+    padding: 0 4%;
+}
+.exim{
+    width:100%;
+    height: 100%;
 
+}
 .f{
     font-size:25px;
     background-color:#00bfff;
     border-radius:10px;
+    text-align: center;
+    margin:0 -2px 0 -2px;
+   
 }
+
 li{
+    margin:10px ;
     display:inline;
     list-style:none;
+    text-align:center;
 }
 a{
+  
     text-decoration: none;
     color: honeydew;
 
@@ -42,7 +57,7 @@ h2:after {
   top: calc(50% - 3px);
   width: 50px;
   height: 6px;
-  content: '';
+  
   border-top: solid 2px #000;
   border-bottom: solid 2px #000;
 }
@@ -54,13 +69,6 @@ h2:before {
 h2:after {
   right: 0;
 }
-
-.Exim{
-    width:100%;
-    height: 680px;
-
-}
-
 #member{
     text-align: center;
 
@@ -77,29 +85,28 @@ h2:after {
     height:200px;
     border-radius:50%;
 }
-h3{
-    font-size:20px;
+#contact{
+    margin: 0 auto 100px auto;
+    padding: 0 4%;
+    text-align:center;
+    
 }
-
-.sec-title{
-    text-align: center;
-}
-
 footer{
     border-top: 1px solid #337ab7;
     background-color: #f5f5f5;
+    text-align:center;
 }
 footer p{
     margin: 10px;
     padding: 20px;
 }
-
-.wrapper{
-    margin: 0 auto 100px auto;
-    padding: 0 4%;
-    text-align: center;
-}
-
-#youbou{
+.youbou{
     color: #20b2aa;
+} 
 }
+
+
+  
+
+
+
