--- a/site/HP/css/Untitled-1.css
+++ b/site/HP/css/Untitled-1.css
@@ -1,80 +1,87 @@
-
 /*↓スマホ用*/
-@media screen and (max-width:480px) {
+@media screen and (max-width:485px) {
     
-  .html{
+  html{
       font-size:100%;
+      
   }
-  
+  .exim{
+    width:100%;
+    height:50%;
+  }
   body{
-    display:flex;
-      width:100%;
       background-color: aliceblue;
-      color: black;
-      margin:0 0 0 0;
-  }
-  
-  .f{
-      font-size:25px;
-      background-color:#00bfff; 
-      display:flex;  
+      color:black; 
   }
 .wrapper{
       margin: 0 auto 100px auto;
       padding: 0 4%;
-      display:flex;
-  }
-  .Exim{
-  margin:0;
-  width:50px;
-  height:100%;
-  object-fit:cover;
+      height:100%;
+      
 
   }
-  .li{
+
+  .f{
+    border-radius:10px;
+    font-size:25px;
+    background-color:#00bfff;
+    text-align:center;
+    margin:0;
+    padding:0;
+}
+  li{
+    margin:2px;
     display:inline;
-     list-style:none;
-     display:flex;
-
-  }
-  .a{
-      color: honeydew;
-      text-decoration: none;
+    list-style:none;
     
   }
+  ul li{
+    width: 100%;            
+    margin: 0 0 5px;       
+    box-sizing: border-box; 
+    display: inline-block;  
+  }
   
-  .a:hover{
+  a{
+    text-decoration: none;
+    color: honeydew; 
+  }
+  
+  a:hover{
       color: #1e90ff;
   }
   
   
-  .h2 {
+  h2 {
    
     display: inline-block;
     padding: 0 65px;
     text-align: center;
   }
   
-  .h2:before,
-  .h2:after {
-    
+  h2:before,
+  h2:after {
+   
     top: calc(50% - 3px);
     width: 50px;
     height: 6px;
-    content: '';
+   
     border-top: solid 2px #000;
     border-bottom: solid 2px #000;
     right: 0;
   }
   
-  .h2:before {
+  h2:before {
     left: 0;
   }
   
   
   #about{
-      text-align: center;
+    text-align:center;
   
+  }
+  #member{
+    text-align:center;
   }
   #Todo{
       text-align: center;
@@ -83,26 +90,29 @@
       width: 200px;
       height:200px;
       border-radius:50%;
+     
   }
   h3{
       font-size:20px;
   }
   
-  .sec-title{
-      text-align: center;
-  }
+  #contact{
+    margin: 0 auto 100px auto;
+    padding: 0 4%;
+    text-align:center;
+}
   
+  .youbou{
+      color: #20b2aa;
+  }
   footer{
-      border-top: 1px solid #337ab7;
-      background-color: #f5f5f5;
+    border-top: 1px solid #337ab7;
+    background-color: #f5f5f5;
   }
   footer p{
       margin: 10px;
       padding: 20px;
-  }
-  
-  #youbou{
-      color: #20b2aa;
+      text-align:center;
   }
 
 }
