--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,9 @@ html{
 body{
   margin:0;
   padding:0;
-  background-color:gray;
+  background-color:rgb(204,204,204);
   
-  color:#fff;
+  color:#000;
 }
 ul li{
   list-style:none;
@@ -29,7 +29,7 @@ h1{
 /*フッター↓*/
 footer{
   border-top: 1px solid #000;
-  background-color: gray;
+  background-color:rgb(204,204,204);
 }
 footer p{
   margin: 0;
@@ -40,6 +40,9 @@ footer p{
   margin: 0 auto 0 auto;
   padding: 0 ;
   text-align: center;
+}
+.the_work{
+  border-top: 1px solid #000;
 }
 /*フッター↑*/
 /*上全てのhtmlに共通*/
@@ -127,7 +130,7 @@ margin-bottom:0;
   justify-content: center; 
 }
 .myname:before, .myname:after {
-  border-top: 1px solid #fff;
+  border-top: 1px solid #000;
   content: "";
   width: 3em; /* 線の長さ */
 }
